JWT Files & Many Route Updates